--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			display: -ms-flexbox;
 		}
 	.section1{
-		text-align:center;
+		/* text-align:center; */
 		margin-top: 25px;
 		margin-left: 200px;
 		}
@@ -153,17 +153,198 @@
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
 		<div class="section1">
 					<table>
-					<p style="text-align:center;"><td style="width: 50%;text-align:center;">Data Security and Users Privacy</td><td style="width: 50%;text-align:center;">Internet of Things Application and Security</td></br>
+					<p ><td style="width: 50%;text-align:center;">Data Security and Users Privacy</td><td style="width: 50%;text-align:center;">Internet of Things Application and Security</td></br>
 					</table>
-				        <p style="text-align:center"><img src="image/DFSC图片5.png" style="width:30%; height:30%; margin: 10px;" ><img src="image/DFSC图片6.png" style="width:30%; height:30%;margin: 10px;"></a> <br/>
+				        <p ><img src="image/DFSC图片5.png" style="width:30%; height:30%; margin: 10px;" ><img src="image/DFSC图片6.png" style="width:30%; height:30%;margin: 10px;"></a> <br/>
 		                        <table>			               
-					<p style="text-align:center;"><td style="width: 50%;text-align:center;">Post Quantum Cryptography Implementation and Applications</td><td style="width: 50%;text-align:center;">Artificial Intelligence Application and Security</td></br>
+					<p ><td style="width: 50%;text-align:center;">Post Quantum Cryptography Implementation and Applications</td><td style="width: 50%;text-align:center;">Artificial Intelligence Application and Security</td></br>
 					</table>
-					<p style="text-align:center"><img src="image/DFSC图片1.png " style="width:30%; height:30%; margin: 10px;" ><img src="image/DFSC图片3.png " style="width:30%; height:30%;margin: 10px;"></a> <br/>	                        
+					<p ><img src="image/DFSC图片1.png " style="width:30%; height:30%; margin: 10px;" ><img src="image/DFSC图片3.png " style="width:30%; height:30%;margin: 10px;"></a> <br/>	                        
 					<table>
-					<p style="text-align:center;"><td style="width: 50%;text-align:center;">Blockchain and Application</td><td style="width: 50%;text-align:center;">CloudNative Application and Security</td></br>
+					<p ><td style="width: 50%;text-align:center;">Blockchain and Application</td><td style="width: 50%;text-align:center;">CloudNative Application and Security</td></br>
 					</table>
-		                        <p style="text-align:center"><img src="image/DFSC图片2.png" style="width:30%; height:30%; margin: 10px;" ><img src="image/DFSC图片4.png " style="width:30%; height:30%; margin: 10px;" >
+		            <p ><img src="image/DFSC图片2.png" style="width:30%; height:30%; margin: 10px;" ><img src="image/DFSC图片4.png " style="width:30%; height:30%; margin: 10px;" >
+</a> <br/>	
+                                </div>                             
+		<div class="footer3 removeborder">
+			<p><a href="contact.html">Contact us</a></p>
+		</div>		
+		<p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:25%; height:25%; margin: 10px;" ><img src="image/图层%201(1).png" style="width:25%; height:25%; margin: 10px;" ><img src="image/FTG logo.jpg " style="width:25%; height:25%;margin: 10px;"></a> <br/>		
+		 <div class="footer4 removeborder">
+			 <p style="text-align:center"><strong>©2016 DFSC Center &nbsp;&nbsp;||&nbsp;&nbsp; UK</strong></a> <br/>			
+		</div>  
+		    <script type="text/javascript">
+                     function googleTranslateElementInit() {
+                     new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+                }
+                </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>        
+            </body>               
+            </html><!DOCTYPE html>
+<html lang="zh-CN" >
+<meta name="google-translate-customization" content="108d9124921d80c3-80e20d618ff053c8-g4f02ec6f3dba68b7-c"></meta>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale= 1.0 maximum-scale=1.0 user-scalable=0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--
+    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    -->
+    <script src="https://cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style.css" media="screen" >
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <title>Digital Future Research Center</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="introduction.css"/>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+	<style type="text/css">
+		 *{
+    padding:0;
+    margin:0;
+    border:none;
+}
+	.navbar-collapse li ul{
+			display:none;
+			height:auto;
+			position:absolute;
+			width:100%;
+			margin:0px;
+			list-style-type: none;
+			text-align: center;
+		}
+		.navbar-collapse li:hover ul{
+			display:block;
+			display: -ms-flexbox;
+		}
+	.section1{
+		/* text-align:center; */
+		margin-top: 25px;
+		margin-left: 200px;
+		}
+	 .section {
+		 background-color:skyblue;
+	         color:black;
+	         clear:both;
+	         text-align:center;
+	         padding:5px; 
+	         border-style: groove;	         
+	         border-radius: 20px;
+	         margin-top: 15px;
+	         margin-bottom: 30px;
+		 text-align: justify;
+	}
+	.footer {
+	    background-color:skyblue;
+	    color:black;
+	    clear:both;
+	    text-align:center;
+	    padding:5px; 
+	    border-style: groove;	    
+	    border-radius: 20px;
+	    margin-top: 15px;
+	    margin-bottom: 30px;
+	    text-align:justify;
+	}
+	.footer1 {
+	    background-color:skyblue;
+	    color:black;
+	    clear:both;
+	    text-align:center;
+	    padding:5px; 
+	    border-style: groove;	    
+	    border-radius: 20px;
+	    margin-top: 15px;
+	    margin-bottom: 30px;
+	    text-align:justify;
+	}
+	.footer3{
+		margin-top: 15px;	
+		}
+	.footer4{
+		text-align:center;
+		margin-top: 15px;
+		}
+	.induc{
+		color:  skyblue;
+	} 
+	.removeborder{ 
+		border: none
+		}
+	</style>
+</head>
+    
+     
+<body background="image/图片111.jpg">
+    <div >
+        <div id="head">
+            <header style="min-height: 76px;">
+                <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                                <span class="sr-only">切换导航</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <!--   <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> -->
+                        </div>
+                        <div id="navbar-collapse" class="collapse navbar-collapse">
+                           <ul class="nav navbar-nav navbar-center">
+                                    <li><a href="index.html">
+                                    <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+				   <li class="submenu">
+                                    <a href="News.html">News</a>
+                                </li>
+                                <li class="submenu">
+				<a href="Conference.html">Conferences</a>
+				  <ul class="Conferences"><i><em></em></i>
+				         <li style="vertical-align:middle;"><a href="SHDI Introduction.html">SHDI</a></li>
+					 <li style="vertical-align:middle;"><a href="SMPC Introduction.html">SMPC</a></li>
+					<li style="vertical-align:middle;"><a href="QPQC Introduction.html">QPQC</a></li>
+					<li style="vertical-align:middle;"><a href="CSAC Introduction.html">CSAC</a></li>
+					<li style="vertical-align:middle;"><a href="CC Introduction.html">CC</a></li>					
+				</ul>
+			</li>
+                                 <li class="submenu">
+                                    <a href="Training-Camp.html">Training Camp</a>
+                                </li>
+                                <li class="submenu">
+                                    <a href="project.html">Projects</a>
+                                </li>
+                                <li class="submenu">
+                                    <a href="product.html">Products</a>
+                                </li>
+				<li class="submenu">
+                                    <a href="About us Introduction.html">About us</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </header>
+
+            <div id = "introdution">
+                        <div class="introdution">
+                            <div id="theme">				    
+<!--                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
+                               <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
+		<div class="section1">
+					<table>
+					<p ><td style="width: 50%;text-align:center;">Data Security and Users Privacy</td><td style="width: 50%;text-align:center;">Internet of Things Application and Security</td></br>
+					</table>
+				        <p ><img src="image/DFSC图片5.png" style="width:30%; height:30%; margin: 10px;" ><img src="image/DFSC图片6.png" style="width:30%; height:30%;margin: 10px;"></a> <br/>
+		                        <table>			               
+					<p ><td style="width: 50%;text-align:center;">Post Quantum Cryptography Implementation and Applications</td><td style="width: 50%;text-align:center;">Artificial Intelligence Application and Security</td></br>
+					</table>
+					<p ><img src="image/DFSC图片1.png " style="width:30%; height:30%; margin: 10px;" ><img src="image/DFSC图片3.png " style="width:30%; height:30%;margin: 10px;"></a> <br/>	                        
+					<table>
+					<p ><td style="width: 50%;text-align:center;">Blockchain and Application</td><td style="width: 50%;text-align:center;">CloudNative Application and Security</td></br>
+					</table>
+		            <p ><img src="image/DFSC图片2.png" style="width:30%; height:30%; margin: 10px;" ><img src="image/DFSC图片4.png " style="width:30%; height:30%; margin: 10px;" >
 </a> <br/>	
                                 </div>                             
 		<div class="footer3 removeborder">
