--- a/index.html
+++ b/index.html
@@ -120,24 +120,24 @@
 				<td>Internet of Things Application and Security</td>
 			</tr>
 			<tr>
-				<td><img src="image/DFSC图片5.png"></td>
-				<td><img src="image/DFSC图片6.png"></td>
+				<td><img src="image/DFSC图片5.png" style="width:50%; height:50%;"></td>
+				<td><img src="image/DFSC图片6.png" style="width:50%; height:50%;"></td>
 			</tr>
 			<tr>
 				<td>Post Quantum Cryptography</td>
 				<td>Artificial Intelligence Application and Security</td>
 			</tr>
 			<tr>
-				<td><img src="image/DFSC图片1.png"></td>
-				<td><img src="image/DFSC图片3.png" ></td>
+				<td><img src="image/DFSC图片1.png" style="width:50%; height:50%;"></td>
+				<td><img src="image/DFSC图片3.png" style="width:50%; height:50%;"></td>
 			</tr>
 			<tr>
 				<td>Blockchain and Application</td>
 				<td>CloudNative Application and Security</td>
 			</tr>
 			<tr>
-				<td><img src="image/DFSC图片2.png" ></td>
-				<td><img src="image/DFSC图片4.png"></td>
+				<td><img src="image/DFSC图片2.png" style="width:50%; height:50%;"></td>
+				<td><img src="image/DFSC图片4.png" style="width:50%; height:50%;"></td>
 			</tr>
 		</table>                            
 		<div class="footer3 removeborder">
