--- a/index.html
+++ b/index.html
@@ -120,30 +120,30 @@
 				<td>Internet of Things Application and Security</td>
 			</tr>
 			<tr>
-				<td><img src="image/DFSC图片5.png" style="width:50%; height:50%;"></td>
-				<td><img src="image/DFSC图片6.png" style="width:50%; height:50%;"></td>
+				<td><img src="image/DFSC图片5.png" style="width:50px; height:50px;"></td>
+				<td><img src="image/DFSC图片6.png" style="width:50px; height:50px;"></td>
 			</tr>
 			<tr>
 				<td>Post Quantum Cryptography</td>
 				<td>Artificial Intelligence Application and Security</td>
 			</tr>
 			<tr>
-				<td><img src="image/DFSC图片1.png" style="width:50%; height:50%;"></td>
-				<td><img src="image/DFSC图片3.png" style="width:50%; height:50%;"></td>
+				<td><img src="image/DFSC图片1.png" style="width:50px; height:50px;"></td>
+				<td><img src="image/DFSC图片3.png" style="width:50px; height:50px;"></td>
 			</tr>
 			<tr>
 				<td>Blockchain and Application</td>
 				<td>CloudNative Application and Security</td>
 			</tr>
 			<tr>
-				<td><img src="image/DFSC图片2.png" style="width:50%; height:50%;"></td>
-				<td><img src="image/DFSC图片4.png" style="width:50%; height:50%;"></td>
+				<td><img src="image/DFSC图片2.png" style="width:50px; height:50px;"></td>
+				<td><img src="image/DFSC图片4.png" style="width:50px; height:50px;"></td>
 			</tr>
 		</table>                            
 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a></p>
 		</div>		
-		<p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:15%; height:15%; margin: 10px;" ><img src="image/图层%201(1).png" style="width:15%; height:15%; margin: 10px;" ><img src="image/FTG logo.jpg " style="width:15%; height:15%;margin: 10px;"></a> <br/>		
+		<p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><img src="image/图层%201(1).png" style="width:18%; height:18%; margin: 10px;" ><img src="image/FTG logo.jpg " style="width:18%; height:18%;margin: 10px;"></a> <br/>		
 		 <div class="footer4 removeborder">
 			 <p style="text-align:center"><strong>©2016 DFSC Center &nbsp;&nbsp;||&nbsp;&nbsp; UK</strong></a> <br/>			
 		</div>  
