--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 		<div class="footer3 removeborder">
 			<p><a href="contact.html">Contact us</a></p>
 		</div>		
-		<p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><img src="image/图层%201(1).png" style="width:18%; height:18%; margin: 10px;" ><img src="image/FTG logo.jpg " style="width:18%; height:18%;margin: 10px;"></a> <br/>		
+		<p>Cooperation: <img src="image/图层%201(1).png" style="width:18%; height:18%; margin: 10px;" ><img src="image/FTG logo.jpg " style="width:18%; height:18%;margin: 10px;"></a> <br/>		
 		 <div class="footer4 removeborder">
-			 <p style="text-align:center"><strong>©2016 DFSC Center &nbsp;&nbsp;||&nbsp;&nbsp; UK</strong></a> <br/>			
+			 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>©2016 DFSC Center &nbsp;&nbsp;||&nbsp;&nbsp; UK</strong></a> <br/>			
 		</div>  
 		    <script type="text/javascript">
                      function googleTranslateElementInit() {
