--- a/News.html
+++ b/News.html
@@ -280,10 +280,10 @@ var p21=document.getElementById("p21");
 	 </td>
 </tr>	
 	     <div class="footer1 removeborder">
-		  <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
+		  <p style="text-align:center"></a> <br/>
 	     </div>
 	     <div class="footer2 removeborder">
-		  <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>			
+		  <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a> <br/>			
 	     </div>
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
