--- a/Conference.html
+++ b/Conference.html
@@ -173,10 +173,10 @@
 			    <p style="text-indent:2em ">Universities, research institutes and enterprises in related fields can contact us to sponsor the conferences, which will provide you with a platform to showcase your research work and products. For more information, <a href="contact.html">contact</a> us.<br/>                            	                   
 		    		    </div>	
 		    <div class="footer3 removeborder">
-		    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
+		    <p style="text-align:center"></a> <br/>
 		       </div>   
 		    <div class="footer4 removeborder">
-			<p style="text-align:center"><strong>©2016 DFSC Center</strong></a><br/>	  
+			<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>	  
 		    </div>
 		    </div>
 		    
