--- a/Training-Camp.html
+++ b/Training-Camp.html
@@ -183,9 +183,9 @@
                     <div class="footer3 removeborder">
 			    <p><a href="contact.html">Contact us</a></p>
                     </div>
-                    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png" style="width:18%; height:18%; margin: 10px 20px;" ><img src="image/图层%201(1).png" style="width:18%; height:18%;margin: 10px;"></a> <br/>
+                    <p>Cooperation: <img src="image/图层%201(1).png" style="width:18%; height:18%;margin: 10px;"></a> <br/>
                     <div class="footer4 removeborder">
-			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>   
+			 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png" style="width:18%; height:18%; margin: 10px 20px;" ><strong>©2016 DFSC Center</strong></a> <br/>   
                     </div>                   
         </div>
 <script type="text/javascript">
