--- a/product.html
+++ b/product.html
@@ -190,10 +190,10 @@ date.setTime(date.getTime() - skew)
                 <p style="text-indent:2em ">Products Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
 		</div>
 		<div class="footer1 removeborder">
-                <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
+                <p style="text-align:center"></a> <br/>
 		</div>
 		<div class="footer2 removeborder">
-                <p style="text-align:center"><strong>©2016 DFSC Center</strong></a><br/>
+                <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>
 		</div>
         </div>
 <script type="text/javascript">
