--- a/Conference.html
+++ b/Conference.html
@@ -161,11 +161,12 @@
 		    </div>
 <!-- 			    <hr> -->
 		    <div class="footer1 removeborder">
-                    <p style="text-align: center;font-size: 20px">The conference list</p> 
-                    <p style="text-indent:2em ">International Data Secure and Privacy-preserving Computation Conference -<a href="SMPC Introduction.html">SMPC</a><br/> 
-                    <p style="text-indent:2em ">International Quantum Computation and Post-quantum Cryptography Conference -<a href="QPQC Introduction.html">QPQC</a><br/>
-                    <p style="text-indent:2em ">International Cybersecurity and Applied Cryptography Conference -<a href="CSAC Introduction.html">CSAC</a><br/>
-                    <p style="text-indent:2em ">International Code and Cryptography and Application Conference -<a href="CC Introduction.html">CC</a><br/>                   
+                    <p style="text-align: center;font-size: 20px">Conference List:</p> 
+                    <p style="text-indent:2em ">*International Quantum Computation and Post-quantum Cryptography Conference -<a href="QPQC Introduction.html">QPQC</a><br/> 
+                    <p style="text-indent:2em ">*International Data Secure and Privacy-preserving Computation Conference -<a href="SMPC Introduction.html">SMPC</a><br/>
+                    <p style="text-indent:2em ">*International Code and Cryptography and Application Conference -<a href="CC Introduction.html">CCC</a><br/> 
+                    <p style="text-indent:2em ">*International Cybersecurity and Applied Cryptography Conference -<a href="CSAC Introduction.html">CSAC</a><br/>
+	            <p style="text-indent:2em ">*International Software and Hardware Design and Implementation Conference -<a href="SHDI Introduction.html">SHDI</a><br/> 
 		    </div>
 		    <!-- <hr> -->
 		    <div class="footer2 removeborder">
