--- a/contact.html
+++ b/contact.html
@@ -207,10 +207,10 @@
 		</form> 
 		    </table>
                     <div class="footer1 removeborder">
-		    <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;></a> <br/>
+		    <p style="text-align:center"></a> <br/>
                     </div>
 		    <div class="footer2 removeborder">
-			 <p style="text-align:center"><strong>©2016 DFSC Center</strong></a> <br/>   
+			 <p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a> <br/>   
                     </div>                   
         </div>
 <script type="text/javascript">
