--- a/Conference.html
+++ b/Conference.html
@@ -153,7 +153,7 @@
 		<p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/circle-cropped.png" style="width:10%; height:10%; margin: 10px;" ><img alt="CSAC-2019" src="image/circle-cropped-csac.png" style="width:10%; height:10%; margin: 10px;" ><img alt="QPQCC" src="image/QPQCC.png" style="width:10%; height:10%; margin: 10px;" ><img alt="安全多方计算国际论坛-2019" src="image/logo.png" style="width:10%; height:10%;margin: 10px;"><img  alt="CC"src="image/CC.png" style="width:10%; height:10%; margin: 10px;" ></a> <br/>
 <!--                      <hr> -->
 		      <div class="section1 removeborder">
-                     <p style="text-indent:2em ">With rapid development of information science, especially Interdisciplinary development, it is very important for experts in different fields to discuss with each other around the world.<br/>
+                     <p style="text-indent:2em "> <br/>
 		     </div>
 			<!-- <hr> -->
 		    <div class="section2 removeborder">                  
