--- a/Conference.html
+++ b/Conference.html
@@ -152,9 +152,7 @@
 		</div> -->
 		<p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/circle-cropped.png" style="width:10%; height:10%; margin: 10px;" ><img alt="CSAC-2019" src="image/circle-cropped-csac.png" style="width:10%; height:10%; margin: 10px;" ><img alt="QPQCC" src="image/QPQCC.png" style="width:10%; height:10%; margin: 10px;" ><img alt="安全多方计算国际论坛-2019" src="image/logo.png" style="width:10%; height:10%;margin: 10px;"><img  alt="CC"src="image/CC.png" style="width:10%; height:10%; margin: 10px;" ></a> <br/>
 <!--                      <hr> -->
-		      <div class="section1 removeborder">
-                     <p style="text-indent:2em "> <br/>
-		     </div>
+		     
 			<!-- <hr> -->
 		    <div class="section2 removeborder">                  
                     <p style="text-indent:2em ">DFSC organizes and participates in the organization of a series of conferences in information science. Conferences would like to invite well-known experts in theoretical research, implementation and application to give invited topics including: Mathematical theory and its application, Cryptographic theory and its application, Cyberspace security, Artificial intelligence, Digital economics and society, Cloud computing, Secure and privacy-preserving computation, Hardware design and implementation, Software design and implementation, Quantum computation and its application, 5G/6G communication and application, Internet of Things, Autopilot and implementation, Satellite communication and its application, etc..<br/> 
@@ -170,7 +168,7 @@
 		    </div>
 		    <!-- <hr> -->
 		    <div class="footer2 removeborder">
-			    <p style="text-align: center;font-size: 20px">Conference sponsorship and cooperation</p>
+			    <p style="text-align: center;font-size: 20px">Conference Sponsorship and Cooperation</p>
 			    <p style="text-indent:2em ">Universities, research institutes and enterprises in related fields can contact us to sponsor the conferences, which will provide you with a platform to showcase your research work and products. For more information, <a href="contact.html">contact</a> us.<br/>                            	                   
 		    		    </div>	
 		    <div class="footer3 removeborder">
