--- a/Training-Camp.html
+++ b/Training-Camp.html
@@ -155,7 +155,7 @@
 		    </div>
 <!-- 			<hr> -->
 		    <div class="section2 removeborder">
-                    <p style="text-align: center;font-size: 20px">The Spring Training Camp</p>
+                    <p style="text-align: center;font-size: 20px">Spring Training Camp</p>
                     <p style="text-indent:2em ">*Differential Privacy, Implementation and Application-DPLA</a><br/>
                     <p style="text-indent:2em ">*Secure Multi-party Computation, Implementation and Application-SMC</a><br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography, Implementation and Application (Post-Quantum Cryptography)-LBC</a><br/>
@@ -164,7 +164,7 @@
 		    </div> 
 <!-- 			    <hr> -->
 		    <div class="footer1 removeborder">
-                    <p style="text-align: center;font-size: 20px">The Summer Training Camp</p> 
+                    <p style="text-align: center;font-size: 20px">Summer Training Camp</p> 
                     <p style="text-indent:2em ">*AI, Implementation, Application and Security-AIAS</a><br/> 
                     <p style="text-indent:2em ">*Blockchains, Implementation, Application and Security-BIAS</a><br/> 
 	            <p style="text-indent:2em ">*Secure and Privacy-preserving Computation, Implementation and Application-SPC</a><br/> 
@@ -173,7 +173,7 @@
 		    </div> 
 <!-- 			    <hr> -->
 		    <div class="footer2 removeborder">
-                    <p style="text-align: center;font-size: 20px ">The Winter Training Camp</a><br/>
+                    <p style="text-align: center;font-size: 20px ">Winter Training Camp</a><br/>
                     <p style="text-indent:2em ">*Advanced Topics in Cryptography, Implementation and Application-ATC</a><br/>
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption, Implementation and Application-FHE</a><br/>
                     <p style="text-indent:2em ">*IoT, Implementation and Application-IoT</a><br/>
