--- a/Training-Camp.html
+++ b/Training-Camp.html
@@ -151,7 +151,7 @@
                     <p style="text-align: center;font-size: 20px">Training Camp</p>
 <!--                      <hr> -->
 		     <div class="section1 removeborder">
-                    <p style="text-indent:2em ">To cultivate crossing talents and discuss advanced research and industrial application in information science with related world-wide professor and researcher, we also provide online training courses including Fully Homomorphic Encryption, Lattice-based Cryptography, Post-quantum Cryptography, Secure Multi-party Computation，Hardware and Software Implementation of Crypto, Blockchains and application, Difference of Privacy, AI and Application, IoT and Application, etc.. It is the online Training Camp, which would like to utilize modern conference and team system to provide learning courses. <br/> 
+                    <p style="text-indent:2em ">To cultivate crossing talents and discuss advanced research and industrial application in information science with related world-wide professor and researcher, we also provide online training courses including Fully Homomorphic Encryption, Lattice-based Cryptography, Post-quantum Cryptography, Secure Multi-party Computation，Hardware and Software Implementation of Crypto, Blockchains and application, Difference of Privacy, AI and Application, IoT and Application, etc.. It is the online Training Camp including Basic Research Camp and Employment Training Camp for GraduatedStudents, Doctoral Students, Young Researcher and Practitioners in related fileds. <br/> 
 		    </div>
 <!-- 			<hr> -->
 		    <div class="section2 removeborder">
