--- a/The-Spring-Training-Camp.html
+++ b/The-Spring-Training-Camp.html
@@ -130,13 +130,13 @@
                 <div id="theme">                    
 		    <div class="section1 removeborder">			                  
                     <p style="text-indent:2em ">*Differential Privacy, Implementation and Application-DPLA<br/>      
-		    <p style="text-indent:2em ">*Secure Multi-party Computation, Implementation and Application-SMC <br/>
+		    <p style="text-indent:2em ">*Secure Multi-party Computation, Implementation and Application-SMPC <br/>
                     <p style="text-indent:2em ">*Lattice-based Cryptography, Implementation and Application (Post-Quantum Cryptography)-LBC<br/>
 		 </div>
 		<div class="section2 removeborder">	
 		   <p style="text-indent:2em "><a href="DP syllabus.html">DPLA Syllabus(课程安排)</a><br/>
 		    <p style="text-indent:2em "><a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a><br/>
-		    <p style="text-indent:2em "><a href="PQC syllabus.html">PQC syllabus(课程安排)</a><br/>
+		    <p style="text-indent:2em "><a href="PQC syllabus.html">LBC syllabus(课程安排)</a><br/>
 		   </div>
 		    <div class="footer1 removeborder">
 			<p><a href="Register.html">Register</a></p>			 
