--- a/The-Winter-Training-Camp.html
+++ b/The-Winter-Training-Camp.html
@@ -126,6 +126,7 @@
 		    <div class="section1 removeborder">		
           <p style="text-indent:2em ">*Advanced Topics in Cryptography, Implementation and Application-ATC<br/>
           <p style="text-indent:2em ">*Fully Homomorphic Encryption, Implementation and Application-FHE<br/>
+          <p style="text-indent:2em ">*Internet of Things, Implementation and Application-IoT<br/>
                   </div>
 		<div class="section2 removeborder">
 			<p style="text-indent:2em "><a href="ATC syllabus.html">ATC Syllabus(课程安排)</a><br/>
