--- a/Conference.html
+++ b/Conference.html
@@ -165,6 +165,7 @@
                     <p style="text-indent:2em ">*International Code and Cryptography and Application Conference -<a href="CC Introduction.html">CCC</a><br/> 
                     <p style="text-indent:2em ">*International Cybersecurity and Applied Cryptography Conference -<a href="CSAC Introduction.html">CSAC</a><br/>
 	            <p style="text-indent:2em ">*International Software and Hardware Design and Implementation Conference -<a href="SHDI Introduction.html">SHDI</a><br/> 
+		    <p style="text-indent:2em ">*International Artificial Intelligence, Implementation and Security Conference -<a href="AIIIS Introduction.html">AIIIS</a><br/> 
 		    </div>
 		    <!-- <hr> -->
 		    <div class="footer2 removeborder">
