--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -68,14 +68,7 @@
                                     <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
-				<a href="Conference.html">Conferences</a>
-				   <ul class="Conferences"><i><em></em></i>
-				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
-					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
-					<li ><a href="QPQC Introduction.html">QPQC</a></li>
-					<li ><a href="CSAC Introduction.html">CSAC</a></li>
-					<li ><a href="CC Introduction.html">CC</a></li>
-				 </ul>
+				<a href="Conference.html">Conferences</a>				 
 			     </li>
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
@@ -97,6 +90,7 @@
         <div id="introdution">
             <div class="introdution">
             <div id="theme">
+		    <p style="text-align:center"><img alt="QPQCC-2019" src="image/QPQCC.png"  style="width: 210px; height: 213px; " ></a> <br/>
                 <p style="text-indent:2em ">Quantum computation and its implementation show enormous threats to most of the Crypto schemes, which maybe not secure in the future. How to protect data secure and privacy of user is research trend. Lattice-based crypto and FHE (Fully Homomorphic Encryption) give the ways to protect data storage, transmission, verification and processing in the quantum world.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; QPQC symposium would like to invit well-known researchers all over the world to present their best works (QPC and QC)about state-of-art, research trends and applications on PQC and QC. Everyone, who does the best works on above fields, will be invited to attend QPQC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
