--- a/index.html
+++ b/index.html
@@ -88,10 +88,7 @@
                                     <a href="Training-Camp.html">Training Camp</a>
                                 </li>
                                 <li class="submenu">
-                                    <a href="project.html">Projects</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="product.html">Products</a>
+                                    <a href="Research.html">Research</a>
                                 </li>
 				<li class="submenu">
                                     <a href="About us Introduction.html">About us</a>
