--- a/About us Introduction.html
+++ b/About us Introduction.html
@@ -119,22 +119,12 @@
                                 </li>
                                 <li class="submenu">
 				<a href="Conference.html">Conferences</a>
-				  <ul class="Conferences"><i><em></em></i>
-				         <li style="vertical-align:middle;"><a href="SHDI Introduction.html">SHDI</a></li>
-					 <li style="vertical-align:middle;"><a href="SMPC Introduction.html">SMPC</a></li>
-					<li style="vertical-align:middle;"><a href="QPQC Introduction.html">QPQC</a></li>
-					<li style="vertical-align:middle;"><a href="CSAC Introduction.html">CSAC</a></li>
-					<li style="vertical-align:middle;"><a href="CC Introduction.html">CC</a></li>                                       
-				</ul>
 			</li>
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
                                 </li>
-                                <li class="submenu">
-                                    <a href="project.html">Projects</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="product.html">Products</a>
+                                 <li class="submenu">
+                                    <a href="Research.html">Research</a>
                                 </li>
 				<li class="submenu">
                                     <a href="About us Introduction.html">About us</a>
