--- a/SHDI Introduction.html
+++ b/SHDI Introduction.html
@@ -70,22 +70,12 @@
                                 </li>
                                 <li class="submenu">
 				<a href="Conference.html">Conferences</a>
-				         <ul class="Conferences"><i><em></em></i>
-				             <li ><a href="SHDI Introduction.html">SHDI</a></li>
-					     <li ><a href="SMPC Introduction.html">SMPC</a><//li>
-					     <li ><a href="QPQC Introduction.html">QPQC</a></li>
-					     <li ><a href="CSAC Introduction.html">CSAC</a></li>
-					     <li ><a href="CC Introduction.html">CC</a></li>
-				         </ul>
 			            </li>
                                  <li class="submenu">
                                     <a href="Training-Camp.html">Training Camp</a>
                                 </li>
-                                 <li class="submenu">
-                                    <a href="project.html">Projects</a>
-                                </li>
                                 <li class="submenu">
-                                    <a href="product.html">Products</a>
+                                    <a href="Research.html">Research</a>
                                 </li>
 			        <li class="submenu">
                                     <a href="About us Introduction.html">About us</a>
