--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -91,17 +91,15 @@
             <div class="introdution">
             <div id="theme">
 		    <p style="text-align:center"><img alt="QPQCC-2019" src="image/QPQCC.png"  style="width: 210px; height: 213px; " ></a> <br/>
-                <p style="text-indent:2em ">Quantum computation and its implementation show enormous threats to most of the Crypto schemes, which maybe not secure in the future. How to protect data secure and privacy of user is research trend. Lattice-based crypto and FHE (Fully Homomorphic Encryption) give the ways to protect data storage, transmission, verification and processing in the quantum world.<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp; QPQC symposium would like to invit well-known researchers all over the world to present their best works (QPC and QC)about state-of-art, research trends and applications on PQC and QC. Everyone, who does the best works on above fields, will be invited to attend QPQC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
-                    &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-		</p>
-		  <div class="footer removeborder">
-                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2016.html">QPQC Symposiu-2016</a> <br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2017.html">QPQC Symposiu-2017</a> <br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2018.html">QPQC Symposiu-2018</a> <br/>
-                    &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2019.html">QPQC Symposiu-2019</a> <br/>
-                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="QPQC-2020.html">QPQC Symposiu-2020</a> <br/>
+                <div class="footer1 removeborder">
+		    <p style="text-indent:2em ">Quantum computation and implementation show strong power. How to protect data secure and users' privacy is very important problem. Lattice-based cryptography (such as Fully Homomorphic Encryption-FHE) gives us the ways to protect data storage, transmission, verification and processing in the quantum world.</a><br/>
+                    </div>
+		    <div class="footer2 removeborder">
+		 <p style="text-indent:2em ">QPQC(Quantum and Post Quantum Cryptography) Conference would like to invit well-known researchers all over the world to present their best works about state-of-art, research hotspots and applications on PQC (Post Quantum Cryptography) and QC (Quantum Computation). Everyone, who does the best works on above fields, will be invited to attend QPQC conference, and present their reasearch works. We would like to provid tranvel funding for the invited speakers.</a><br/>
+                  
+                 <p style="text-indent:2em "><a href="QPQC-2016.html">QPQC Conference-2016</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="QPQC-2017.html">QPQC Conference-2017</a><br/>
+                 <p style="text-indent:2em "><a href="QPQC-2018.html">QPQC Conference-2018</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="QPQC-2019.html">QPQC Conference-2019</a> <br/>
+                 <p style="text-indent:2em "><a href="QPQC-2020.html">QPQC Conference-2020</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="QPQC-2021.html">QPQC Conference-2021</a><br/>
 		  </div>
             </div> 
             </div>
