--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -92,7 +92,7 @@
             <div id="theme">
 		    <p style="text-align:center"><img alt="QPQCC-2019" src="image/QPQCC.png"  style="width: 210px; height: 213px; " ></a> <br/>
                 <div class="footer1 removeborder">
-		    <p style="text-indent:2em ">Quantum computation and implementation show strong power. How to protect data secure and users' privacy is very important problem. Lattice-based cryptography (such as Fully Homomorphic Encryption-FHE) gives us the ways to protect data storage, transmission, verification and processing in the quantum world.</a><br/>
+		    <p style="text-indent:2em ">Quantum computation and implementation show strong power. How to protect data secure and users' privacy is very important. Lattice-based cryptography (such as Fully Homomorphic Encryption-FHE) gives us the ways to protect data storage, transmission, verification and processing in the quantum world.</a><br/>
                     </div>
 		    <div class="footer2 removeborder">
 		 <p style="text-indent:2em ">QPQC(Quantum and Post Quantum Cryptography) Conference would like to invit well-known researchers all over the world to present their best works about state-of-art, research hotspots and applications on PQC (Post Quantum Cryptography) and QC (Quantum Computation). Everyone, who does the best works on above fields, will be invited to attend QPQC conference, and present their reasearch works. We would like to provid tranvel funding for the invited speakers.</a><br/>
