--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -92,15 +92,18 @@
             <div id="theme">
 		    <p style="text-align:center"><img alt="QPQCC-2019" src="image/QPQCC.png"  style="width: 210px; height: 213px; " ></a> <br/>
                 <div class="footer1 removeborder">
-		    <p style="text-indent:2em ">Quantum computation and implementation show strong power. How to protect data secure and users' privacy is very important. Lattice-based cryptography (such as Fully Homomorphic Encryption-FHE) gives us the ways to protect data storage, transmission, verification and processing in the quantum world.</a><br/>
+		    <p style="text-indent:2em ">Quantum computation and implementation show strong power. How to protect data secure and users' privacy is very important. Lattice-based cryptography (such as Fully Homomorphic Encryption-FHE) gives us the ways to protect data security and users privacy in the quantum world.</a><br/>
                     </div>
 		    <div class="footer2 removeborder">
-		 <p style="text-indent:2em ">QPQC(Quantum and Post Quantum Cryptography) Conference would like to invit well-known researchers all over the world to present their best works about state-of-art, research hotspots and applications on PQC (Post Quantum Cryptography) and QC (Quantum Computation). Everyone, who does the best works on above fields, will be invited to attend QPQC conference, and present their reasearch works. We would like to provid tranvel funding for the invited speakers.</a><br/>
+		 <p style="text-indent:2em ">QPQC(Quantum and Post Quantum Cryptography) Conference would like to invit well-known researchers all over the world to present their best works about state-of-art, research hotspots and applications on Post Quantum Cryptography and Quantum Computation. Everyone, who does the best works on above fields, will be invited to attend QPQC conference, and present their reasearch works. We would like to provid tranvel funding for the invited speakers.</a><br/>
                   
                  <p style="text-indent:2em "><a href="QPQC-2016.html">QPQC Conference-2016</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="QPQC-2017.html">QPQC Conference-2017</a><br/>
                  <p style="text-indent:2em "><a href="QPQC-2018.html">QPQC Conference-2018</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="QPQC-2019.html">QPQC Conference-2019</a> <br/>
                  <p style="text-indent:2em "><a href="QPQC-2020.html">QPQC Conference-2020</a>&nbsp; &nbsp; ||&nbsp; &nbsp; <a href="QPQC-2021.html">QPQC Conference-2021</a><br/>
 		  </div>
+	     <div class="footer4 removeborder">
+			<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:18%; height:18%;" height:80px;><strong>©2016 DFSC Center</strong></a><br/>	  
+		    </div>
             </div> 
             </div>
     <script type="text/javascript">
