--- a/News.html
+++ b/News.html
@@ -141,14 +141,14 @@
 			     <p style="margin: 0 25px;">Industrial News</p>
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
                                      <ul id="p1">
-                                         <li><a href="" style="width: 50%; font-size: 15px;">1这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">2这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">3这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">4这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">5这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">6这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">7这是测试新闻滚动效果</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">8这是测试新闻滚动效果</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">DFSC CENTER Joins EAPIAC Alliance!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">DFSC Center Cooperates with Qirange Company!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">Summer Training Camp Starts!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">DFSC Center Cooperates with FTG Research Group!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
                                     </ul>
                                     <ul id="p2">
                                     </ul>
@@ -158,28 +158,28 @@
 						<p style="margin: 0 55px;">News List</p>
 						<div id="section" onmouseover="tz2()" onmouseout="ks2()">
 							<ul id="p12">
-							<li><a href="" style="width: 50%; font-size: 15px;">1这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">2这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">3这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">4这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">5这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">6这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">7这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">8这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">9这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">10这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">11这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">12这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">13这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">14这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">15这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">16这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">17这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">18这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">19这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">20这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">21这里是新闻列表</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">22这里是新闻列表</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">CSAC Conference-2021-Call for paper!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">QPQC Conference-2021!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">DSPP Conference-2021!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">CCC Conference-2021!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">DFSC CENTER Joins EAPIAC Alliance!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">DFSC Center Cooperates with Qirange Company!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">Summer Training Camp Start!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">Summer Training Camp Start!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">DFSC Center Cooperates with FTG Research Group!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
 							</ul>
 							<ul id="p21">
 							</ul>
@@ -191,14 +191,14 @@
 									<p style="margin: 0 25px;">Research News</p>
 									    <div id="news1" onmouseover="tz1()" onmouseout="ks1()">
 									                     <ul id="p11">
-									                         <li><a href="" style="width: 50%; font-size: 15px;">1这是测试新闻滚动效果</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">2这是测试新闻滚动效果</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">3这是测试新闻滚动效果</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">4这是测试新闻滚动效果</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">5这是测试新闻滚动效果</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">6这是测试新闻滚动效果</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">7这是测试新闻滚动效果</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">8这是测试新闻滚动效果</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">QPQC Conference-2021!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">DSPP Conference-2021!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">CCC Conference-2021!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">CSAC Conference-2021-Call for paper!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">News!News!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
 									                     </ul>
 									                     <ul id="p22">
 									                     </ul>
