--- a/News.html
+++ b/News.html
@@ -134,21 +134,21 @@
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align: center;font-size: 20px">News</p>
+                    
 					<table>
                      <tr>
 			<td>
 			     <p style="margin: 0 25px;">Industrial News</p>
 				<div id="news" onmouseover="tz()" onmouseout="ks()">
                                      <ul id="p1">
-                                         <li><a href="" style="width: 50%; font-size: 15px;">DFSC CENTER Joins EAPIAC Alliance!</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">DFSC Center Cooperates with Qirange Company!</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">Summer Training Camp Starts!</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">DFSC Center Cooperates with FTG Research Group!</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-                                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">**DFSC CENTER Joins EAPIAC Alliance!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">**DFSC Center Cooperates with Qirange Company!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">**Summer Training Camp Starts!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">**DFSC Center Cooperates with FTG Research Group!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+                                         <li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
                                     </ul>
                                     <ul id="p2">
                                     </ul>
@@ -158,28 +158,28 @@
 						<p style="margin: 0 55px;">News List</p>
 						<div id="section" onmouseover="tz2()" onmouseout="ks2()">
 							<ul id="p12">
-							<li><a href="" style="width: 50%; font-size: 15px;">CSAC Conference-2021-Call for paper!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">QPQC Conference-2021!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">DSPP Conference-2021!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">CCC Conference-2021!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">DFSC CENTER Joins EAPIAC Alliance!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">DFSC Center Cooperates with Qirange Company!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">Summer Training Camp Start!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">Summer Training Camp Start!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">DFSC Center Cooperates with FTG Research Group!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-							<li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**CSAC Conference-2021-Call for paper!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**QPQC Conference-2021!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**DSPP Conference-2021!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**CCC Conference-2021!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**DFSC CENTER Joins EAPIAC Alliance!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**DFSC Center Cooperates with Qirange Company!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**Summer Training Camp Start!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**DFSC Center Cooperates with FTG Research Group!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+							<li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
 							</ul>
 							<ul id="p21">
 							</ul>
@@ -191,14 +191,14 @@
 									<p style="margin: 0 25px;">Research News</p>
 									    <div id="news1" onmouseover="tz1()" onmouseout="ks1()">
 									                     <ul id="p11">
-									                         <li><a href="" style="width: 50%; font-size: 15px;">QPQC Conference-2021!</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">DSPP Conference-2021!</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">CCC Conference-2021!</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">CSAC Conference-2021-Call for paper!</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">News!News!</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
-									                         <li><a href="" style="width: 50%; font-size: 15px;">News!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">**CSAC Conference-2021-Call for paper!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">**DSPP Conference-2021!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">**CCC Conference-2021!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">**QPQC Conference-2021!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
+									                         <li><a href="" style="width: 50%; font-size: 15px;">**News!</a></li>
 									                     </ul>
 									                     <ul id="p22">
 									                     </ul>
