--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -87,21 +87,21 @@
             </div> 
             <div class="main2">
                 <div id="main2">
-                    <div id="contents">
-                        <p align="center">会议组委会(排名不分先后顺序)<br/></p>
+                    <div id="contents" class="personnel1">
+                        <p align="center" class="organization">会议组委会(排名不分先后顺序)<br/></p>
 <p align="center">来学嘉&nbsp&nbsp&nbsp王杰&nbsp&nbsp&nbsp裴定一 陈克非 吴文玲 杨义先 温巧燕 谷大武 林东岱&nbsp&nbsp&nbsp李晖&nbsp&nbsp&nbsp毛文波<br/></p>
 <p align="center">&nbsp&nbsp&nbsp冯荣权 戚文峰&nbsp&nbsp张卫明 马建峰 徐茂智 刘胜利 张方国 徐秋亮 &nbsp张福泰 &nbsp李凤华&nbsp&nbsp&nbsp杨波&nbsp&nbsp&nbsp&nbsp<br/></p> 
 <p align="center">&nbsp&nbsp任奎&nbsp&nbsp&nbsp&nbsp胡磊&nbsp&nbsp&nbsp&nbsp许春香 &nbsp唐韶华&nbsp&nbsp&nbsp郑东&nbsp&nbsp&nbsp王良民 李丽香&nbsp&nbsp赵波&nbsp&nbsp&nbsp&nbsp&nbsp吴铤&nbsp&nbsp&nbsp&nbsp祝烈煌 &nbsp路荣幸 <br/></p> 
 <p align="center">&nbsp&nbsp&nbsp&nbsp王美琴&nbsp&nbsp&nbsp&nbsp翁健&nbsp&nbsp&nbsp陈晓峰 伍前红 黄欣沂 孔凡玉 吕继强&nbsp&nbsp&nbsp刘哲&nbsp&nbsp&nbsp屈龙江 &nbsp&nbsp石文昌&nbsp&nbsp&nbsp&nbsp禹勇&nbsp&nbsp&nbsp&nbsp <br/></p>
 
 <br/><br/>
-                         <p align="center" >会议主席<br/></p>
+                         <p align="center" class="organization">会议主席<br/></p>
                         <p align="center">刘建伟（北京航空航天大学）<br/></p>
-                        <p align="center">会议程序委员会主席<br/></p>
+                        <p align="center" class="organization">会议程序委员会主席<br/></p>
                         <p align="center">蒋林智（University of Surrey）<br/></p>
-                         <p align="center">会议程序委员会副主席<br/></p>
+                         <p align="center" class="organization">会议程序委员会副主席<br/></p>
                         <p align="center">关振宇 李大伟 （北京航空航天大学）<br/></p>
-                         <p align="center">会议程序委员会<br/></p>
+                         <p align="center" class="organization">会议程序委员会<br/></p>
                         <p align="center">杜晓妮 闫统江 郭富春 刘哲理 蒙威志  张兰 于佳 罗博<br/></p>  
 <p align="center">李洪伟 王高丽 付安民 田海博 潘彦斌  黎琳 李剑 丁勇<br/></p>
                         
@@ -119,10 +119,9 @@
                     </div>
                 </div>   
             </div>    
-              <div id="main2" >
+              <div id="main3" >
         <style type="text/css">
 	table.tableizer-table {
-		font-size: 20px;
 		border: 1px solid #CCC; 
 		font-family: Arial, Helvetica, sans-serif;
 	} 
@@ -144,7 +143,7 @@
 		
 	}
 </style>
-<table class="tableizer-table">
+<table class="tableizer-table" style="margin-top: -60px;" align="center">
 <thead><tr class="tableizer-firstrow"><th>时间</th><th colspan="3">注册和报道</th></tr></thead><tbody>
  <tr><td>09月20日<br>14:00 - 18:00</td><td colspan="3">论坛注册及报到&nbsp;&nbsp;杭州中赢铂金皇冠假日酒店一楼大堂</td></tr>
  <tr><td colspan="4">09月21日&nbsp;(会议地点：北京航空航天大学 杭州研究院 报告厅)</td></tr>
@@ -173,7 +172,7 @@
  <tr><td>14:00 - 17:30</td><td>自由论坛时间</td><td colspan="2">待定</td></tr>
 </tbody></table>
 	    </br></br>
-	<div id="main2" >
+	<div id="main3" >
         <div id="register">
             <table class="table">
                 <caption>注册信息</caption>
@@ -210,7 +209,7 @@
                     </tr>
                 </tbody>
                 </table>
-                <table class="table">
+                <table class="table" style="margin-top: -60px; ">
                 <caption>住宿信息</caption>
                 <tbody >
                     <tr><td style="width: 50%;text-indent: 2em">国际研讨会住宿推荐酒店：<a href="https://map.baidu.com/poi/%E4%B8%AD%E8%B5%A2%E9%93%82%E9%87%91%E7%9A%87%E5%86%A0%E5%81%87%E6%97%A5%E9%85%92%E5%BA%97/@13383000.819019148,3507869.6617725194,18.9z?uid=4026ab4b01281554220220ae&primaryUid=15735708514291461712&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl"><i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 杭州中赢铂金皇冠假日酒店（杭州市滨江区春晓路61号）。房间类型：大床房（500元/间），标准间（500元/间）。<a href="https://map.baidu.com/poi/%E6%9D%AD%E5%B7%9E%E6%98%8E%E8%B1%AA%E5%9B%BD%E9%99%85%E9%85%92%E5%BA%97/@13381813.110803857,3508730.8,19z?uid=b60796c23835904296f08c4a&primaryUid=689557317641610913&ugc_type=3&ugc_ver=1&device_ratio=2&compat=1&querytype=detailConInfo&da_src=shareurl"><i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i>杭州明豪国际酒店（杭州滨江区江南大道558号）。实际收费标准按照酒店当日定价标准。会务组会为您预留房间，请电话联系酒店确认预订房间（报会议名称）。
